src/objects/TwilioConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure the Twilio API Credentials here to send SMS</description>
    <fields>
        <fullName>Account_SID__c</fullName>
        <description>The Account SID of your Twilio Account</description>
        <label>Account SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <label>Auth Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messaging_Service_SID__c</fullName>
        <label>Messaging Service SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Name__c</fullName>
        <label>Service Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twilio_Phone_Number__c</fullName>
        <label>Twilio Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Twilio Configuration</label>
</CustomObject>